Billboard overflow fix

--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -1084,6 +1084,7 @@ blockquote {
     text-align: center;
     position: relative;
     color: #fff;
+    overflow: hidden;
     #glitter_column_billboard_top & { overflow: hidden; }
     .side-col & { overflow: hidden; }
     .billboard-content {
@@ -1197,6 +1198,7 @@ blockquote {
     body.page & { margin-top: 6em; }
     .glitter_page_blocktype_billboard, .glitter_page_blocktype_bannerblock a {
         padding: 0 1em;
+        overflow: visible;
     }
     .glitter_page_blocktype_imageblock {
         width: 100% !important;
